--- a/src/python3_course_for_devs/notebooks/string.ipynb
+++ b/src/python3_course_for_devs/notebooks/string.ipynb
@@ -179,6 +179,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'this a str----------------------------------------'"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 传入新字符串长度，将原字符串左对齐，结尾用占位符补齐，占位符默认为空格\n",
+    "a.ljust(50, \"-\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'----------------------------------------this a str'"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.rjust(50, \"-\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 72,
    "metadata": {},
    "outputs": [
@@ -263,6 +304,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a.startswith(\"str\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 80,
    "metadata": {},
    "outputs": [
@@ -317,7 +367,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 检索最后一次出现的索引\n",
+    "print(a.rfind(\"str\"))\n",
+    "\n",
+    "a.rindex(\"str\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -327,19 +407,303 @@
       "True\n",
       "True\n",
       "True\n",
-      "True\n"
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "This A Str\n",
+      "True\n",
+      "t-h-i-s- -a- -s-t-r\n"
      ]
     }
    ],
    "source": [
-    "# 判断是否不为空且只包含数字和字母\n",
+    "# 判断是否不为空且仅包含数字和字母\n",
     "print(\"uuu74\".isalnum())\n",
-    "# 判断是否不为空且只包含数字和中文\n",
+    "# 判断是否不为空且仅包含数字和中文\n",
     "print(\"uuu你好\".isalpha())\n",
-    "# 判断是否不为空且只包含数字（也就是正整数字面值字符串）\n",
+    "# 判断是否不为空且仅包含数字（也就是正整数字面值字符串）\n",
     "print(\"5557\".isdigit())\n",
     "# 判断是否不为空且不包含大写字母\n",
-    "print(\"2,2y\".islower())"
+    "print(\"2,2y\".islower())\n",
+    "# 判断是否不为空且不包含小写字母\n",
+    "print(\"2,2Y\".isupper())\n",
+    "# 判断是否不为空且仅包含数字字符\n",
+    "print(\"壹佰万½2²\".isnumeric())\n",
+    "# 判断是否不为空且仅包含空格\n",
+    "print(\" \".isspace())\n",
+    "# 字符串标题化\n",
+    "print(a.title())\n",
+    "# 判断是不是标题化字符串\n",
+    "print(a.title().istitle())\n",
+    "# 使用分隔符分隔\n",
+    "print(\"-\".join(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'l c r'"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\" l c r \".strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'l c r '"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\" l c r \".lstrip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\" l c r \".rstrip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'WW'"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"ww\".upper()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"WW\".lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'tHIS a sTR'"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 大小写互相转换\n",
+    "a.title().swapcase()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'_his a s_'"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 根据映射表进行字符替换或删除\n",
+    "tran = str.maketrans(\"t\", \"_\", \"r\")\n",
+    "a.translate(tran)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'t'"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' '"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'this a rst'"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.replace(\"str\", \"rst\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['this ', ' str']"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.split(\"a\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a', 'set', 'set']"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"a\n",
+    "set\n",
+    "set\n",
+    "\"\"\".splitlines()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0000000000000000000000000000000000000000this a str'"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 右对齐，0填充\n",
+    "a.zfill(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 是否仅包含十进制\n",
+    "\"11\".isdecimal()"
    ]
   }
  ],
