--- a/src/python3_course_for_devs/notebooks/var.ipynb
+++ b/src/python3_course_for_devs/notebooks/var.ipynb
@@ -4,89 +4,106 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "在 TS 中我们一般会这样定义一个变量/常量\n",
-    "\n",
-    "```ts\n",
-    "let a = \"这是一个变量\";\n",
-    "\n",
-    "const b = \"这是一个基本型常量\";\n",
-    "\n",
-    "const c = { d: \"引用型常量的属性\" }; // 这是一个引用型常量\n",
-    "```\n",
-    "\n",
-    "1. 变量可以被更改\n",
-    "2. 常量分两种情况：如果是基本型，不可修改。如果是引用型，在内存地址不变的情况下可以被修改\n",
-    "\n",
-    "```ts\n",
-    "a = \"变量可以被更改\";\n",
-    "\n",
-    "b = \"string 是基本型常量，不可被修改\";\n",
-    "// Uncaught TypeError: Assignment to constant variable.\n",
-    "\n",
-    "c = { d: \"引用型常量的属性\" }; // 尽管看起来一样，但实际上常量 c 被分配了一个新的内存地址\n",
-    "// Uncaught TypeError: Assignment to constant variable.\n",
-    "\n",
-    "c.d = \"我只修改了引用型常量属性 d 的值，常量 c 内存地址没变，没有问题\";\n",
-    "```\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "全大写命名法约定这是一个常量\n",
-      "约定是约定，你看我遵不遵守就完了\n",
-      "这次真的不能被修改了\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 但在 python 中变量是这样定义的\n",
-    "\n",
-    "a = \"这是一个变量\"  # 没错，就是这样，直接定义，不需要声明\n",
-    "\n",
-    "\"\"\"\n",
-    "那么，你可能会问，变量定义不需要声明，那常量呢\n",
-    "当然了，常量也不需要声明，因为 python 中没 有 常 量。牛逼\n",
-    "\n",
-    "尽管 python 中没有常量的概念，但是我们依然可以通过全大写命名法来约定一个变量是常量\n",
-    "\"\"\"\n",
-    "\n",
-    "THIS_IS_A_CONST = \"全大写命名法约定这是一个常量\"\n",
-    "print(THIS_IS_A_CONST)\n",
-    "\n",
-    "THIS_IS_A_CONST = \"约定是约定，你看我遵不遵守就完了\"\n",
-    "print(THIS_IS_A_CONST)\n",
-    "\n",
-    "# 如果真的想创建一个无法被修改的常量，可以通过枚举类型实现\n",
-    "\n",
-    "from enum import Enum\n",
-    "\n",
-    "\n",
-    "class Constants(Enum):\n",
-    "    THIS_IS_A_CONST = \"这次真的不能被修改了\"\n",
-    "\n",
-    "\n",
-    "print(Constants.THIS_IS_A_CONST.value)"
+    "# 变量\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "总结一下：\n",
+    "## 如何定义一个变量\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 定义一个变量 x，就这样，甚至都不需要声明\n",
+    "x = 1\n",
     "\n",
-    "python 中变量定义无需声明\n",
+    "# 给变量 x 重新赋值\n",
+    "x = 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 如何定义一个常量\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'bar'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 其实 python 中是没有常量的，但是我们使用全大写命名法来约定一个变量为常量\n",
     "\n",
-    "python 中没有常量的概念，如果想定义常量\n",
+    "BAR = \"bar\"  # 这样，我们就会知道 BAR 应该被作为常量使用\n",
     "\n",
-    "1. 使用全大写命名法约定，但是约定是约定，它依然可以被修改\n",
-    "2. 借助枚举类型实现真正的不可变常量\n"
+    "BAR = \"foo\"  # 但是 BAR 其实仍然可以被改变，因为本质上它还是一个变量\n",
+    "\n",
+    "# 那如何才能声明一个无法被修改的常量？\n",
+    "\n",
+    "# 可以通过枚举实现\n",
+    "from enum import Enum\n",
+    "\n",
+    "\n",
+    "class Constants(Enum):\n",
+    "    BAR = \"bar\"\n",
+    "\n",
+    "\n",
+    "# 这样我们就变相的获得了一个无法被修改的常量\n",
+    "Constants.BAR.value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 变量名规范\n",
+    "\n",
+    "变量名开头使用字母或者下划线，其余部分由字母、数字或下划线组成，字母大小写敏感\n",
+    "\n",
+    "其实中文现在也可以用作变量名，但是不要这么做\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['False', 'None', 'True', 'and', 'as', 'assert', 'async', 'await', 'break', 'class', 'continue', 'def', 'del', 'elif', 'else', 'except', 'finally', 'for', 'from', 'global', 'if', 'import', 'in', 'is', 'lambda', 'nonlocal', 'not', 'or', 'pass', 'raise', 'return', 'try', 'while', 'with', 'yield']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import keyword\n",
+    "\n",
+    "foo_bar_01 = \"foo bar\"  # 声明一个变量\n",
+    "\n",
+    "使用中文作为变量名 = \"不，不要这样\"  # 这样可以，但完全不建议\n",
+    "\n",
+    "# 还有就是下面这些保留字，不要用他们作为变量名\n",
+    "print(keyword.kwlist)"
    ]
   }
  ],
