--- a/src/python3_course_for_devs/notebooks/var.ipynb
+++ b/src/python3_course_for_devs/notebooks/var.ipynb
@@ -11,12 +11,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 如何定义一个变量\n"
+    "### 定义一个变量\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,12 +31,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 如何定义一个常量\n"
+    "### 定义一个常量\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -45,13 +45,13 @@
        "'bar'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 其实 python 中是没有常量的，但是我们使用全大写命名法来约定一个变量为常量\n",
+    "# 其实 python 中并没有常量，但可以使用全大写命名法来约定一个变量为常量\n",
     "\n",
     "BAR = \"bar\"  # 这样，我们就会知道 BAR 应该被作为常量使用\n",
     "\n",
@@ -75,16 +75,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 变量名规范\n",
+    "### 命名规范\n",
     "\n",
     "变量名开头使用字母或者下划线，其余部分由字母、数字或下划线组成，字母大小写敏感\n",
     "\n",
-    "其实中文现在也可以用作变量名，但是不要这么做\n"
+    "其实中文现在也可以用作变量名，但非常不建议这么做\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -96,11 +96,11 @@
     }
    ],
    "source": [
-    "import keyword\n",
-    "\n",
     "foo_bar_01 = \"foo bar\"  # 声明一个变量\n",
     "\n",
     "使用中文作为变量名 = \"不，不要这样\"  # 这样可以，但完全不建议\n",
+    "\n",
+    "import keyword\n",
     "\n",
     "# 还有就是下面这些保留字，不要用他们作为变量名\n",
     "print(keyword.kwlist)"
