--- a/src/python3_course_for_devs/notebooks/basic_syntax.ipynb
+++ b/src/python3_course_for_devs/notebooks/basic_syntax.ipynb
@@ -4,44 +4,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 基本数据类型\n",
-    "\n",
-    "- 数字类型\n",
-    "- 字符串\n",
-    "- 元组\n",
-    "- 列表\n",
-    "- 集合\n",
-    "- 字典\n"
+    "# 基本语法\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 按`数据可变性`划分\n",
-    "\n",
-    "- 不可变（immutable）：数字、字符串、元组\n",
-    "- 可变（mutable）：列表、集合、字典\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 按是否是`序列类型`划分\n",
-    "\n",
-    "- 序列类型：字符串、元组、列表\n",
-    "- 非序列类型：数字、集合、字典\n",
-    "\n",
-    "序列类型具有通用操作\n"
+    "### 注释\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 只建议用符号 # 进行注释"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 编码\n",
+    "\n",
+    "文件编码为 UTF-8\n"
+   ]
   }
  ],
  "metadata": {
