--- a/src/python3_course_for_devs/notebooks/float_calc.ipynb
+++ b/src/python3_course_for_devs/notebooks/float_calc.ipynb
@@ -23,12 +23,12 @@
    "source": [
     "# 开门见山，还是这道题，为什么？\n",
     "\n",
-    "print(0.1 + 0.2 != 0.3)  # True"
+    "0.1 + 0.2 != 0.3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -43,10 +43,10 @@
     }
    ],
    "source": [
-    "# 废话不说，直接看打印结果\n",
+    "# 直接看打印结果\n",
     "def raw_float(number):\n",
     "    precision = 55  # 小数精度\n",
-    "    return \"{:.{}f}\".format(number, precision)\n",
+    "    return f\"{number:.{precision}f}\"\n",
     "\n",
     "\n",
     "print(raw_float(0.1))\n",
@@ -59,7 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "直截了当的说，你看到的 0.1，0.2，0.3 压根就不是 0.1，0.2，0.3。\n",
+    "显然，你看到的 0.1，0.2，0.3 压根就不是 0.1，0.2，0.3。\n",
     "0.1，0.2，0.3 都是十进制里面的值，在二进制里，只有以 2 为底的浮点数（0.5，0.25，0.125...）才能被精确表示。\n",
     "当遇到以 10 为底的浮点数的时候，二进制是无法精确表示的。\n"
    ]
@@ -106,17 +106,22 @@
     "| 0.6 \\* 2 | 1        | 0.2      |\n",
     "\n",
     "结果为 0.00011001100...，你知道了，0.1 由十进制转为二进制的时候结果是个无限循环小数，\n",
+    "\n",
     "同样，0.2 转为二进制为 0.00110011001...，\n",
+    "\n",
     "但是，在二进制存储的时候计算机不可能把所有无限位数都存起来，实际上双精度浮点数小数部分只有 52 位，\n",
+    "\n",
     "所以 0.1 和 0.2 在二进制表示的时候都是会被截断的，截断的时候遇 1 进位遇 0 舍掉，因此在这一步 0.1 和 0.2 已经丢失了精度，\n",
+    "\n",
     "它们根本就不是十进制 0.1 和 0.2 的准确值，都是一个截断之后的近似值。同理 0.3 也是一样的。\n",
-    "当比较 0.1 + 0.2 == 0.3 的时候，由于两边都不是十进制的准确值，所以最后才会得到 False。\n"
+    "\n",
+    "当比较 `0.1 + 0.2 == 0.3` 的时候，由于两边都不是十进制的准确值，所以最后才会得到 False。\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -131,9 +136,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.6"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
