--- a/src/python3_course_for_devs/notebooks/number.ipynb
+++ b/src/python3_course_for_devs/notebooks/number.ipynb
@@ -4,389 +4,392 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> ”一个看上去是整数的东西，其实都是浮点数“ -- mdn web docs\n",
+    "# 数字类型\n",
     "\n",
-    "上面这句话出自 mdn 上的 Number 章节，指的是在 TS 中，我们平时写的数字尽管有的看起来是整型，其实也都是浮点型，\n",
-    "因为在 TS 中，number 类型就是浮点型，如下：\n",
+    "数字类型即非`可变类型`也非`序列类型`（`可变类型`和`序列类型`的概念在 [数据类型]('./types.ipynb') 有讲）\n",
     "\n",
-    "```ts\n",
-    "// a 和 b 都是浮点型，尽管 a 看起来好像是个整型\n",
-    "const a: number = 1;\n",
-    "const b: number = 1.1;\n",
-    "```\n",
+    "数字类型包括：\n",
     "\n",
-    "不过，在 TS 中数值类型是有整型的，那就是在 ES 2020 新加入的类型 bigint\n",
+    "- `int`: 整型（长整型）\n",
+    "- `float`: 浮点型（双精度）\n",
+    "- `complex`: 复数类型\n",
     "\n",
-    "```ts\n",
-    "// 在整数后面加个 n，就是声明 bigint 了，c 就是整数类型\n",
-    "const c = 1n;\n",
-    "console.log(typeof c); // bigint\n",
-    "```\n",
-    "\n",
-    "总结：\n",
-    "\n",
-    "- number：双精度 64 位浮点型\n",
-    "- bigint：长整型\n"
+    "tip: 在 python 中布尔型是数字类型的子类型，详细解释在 [布尔型]('./bool.ipynb')\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 数值类型\n",
-    "\n",
-    "## 类型分类\n",
-    "\n",
-    "python 中数值类型有三种：\n",
-    "\n",
-    "- int: 长整型\n",
-    "- float: 双精度浮点型\n",
-    "- complex: 复数类型\n",
-    "\n",
-    "tip: 在 python 中布尔类型是数值类型的子类型，详细解释在 [布尔型]('./boolean.ipynb')\n"
+    "## 创建一个数字\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 字面值声明\n"
+    "### 通过字面值形式创建\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# int\n",
-    "a = 1  # 正整数\n",
-    "a2 = -1  # 负整数\n",
-    "a3 = 0xA0F  # 十六进制整数\n",
-    "a4 = 0o37  # 八进制整数\n",
-    "\n",
-    "# float\n",
-    "b = 1.1  # 小数\n",
-    "b2 = 2.5e2  # 科学计数法表示的小数\n",
-    "\n",
-    "# complex：用 a + bj 或 complex(a, b) 表示，复数的实部 a 和虚部 b 都是浮点型\n",
-    "c = 1 + 2j"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 类型转换\n",
-    "\n",
-    "接下来看一下 python 如何进行数值类型转换\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "True\n",
-      "20\n",
-      "32\n",
-      "-32\n",
-      "42\n",
-      "42\n",
-      "-42\n",
-      "42\n",
-      "42\n",
-      "42\n",
-      "42\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "42"
+       "(1+2j)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 跟着我，把手中的光标移动到 int() 方法上。你将会看到 int 方法的官方定义\n",
+    "# int 型字面值\n",
+    "1  # 正整数\n",
+    "-1  # 负整数\n",
+    "0xA0F  # 十六进制整数\n",
+    "0o37  # 八进制整数\n",
     "\n",
-    "int()\n",
+    "# float 型字面值\n",
+    "1.1  # 小数\n",
+    "2.5e2  # 科学计数法表示的小数\n",
     "\n",
-    "# int 方法的官方解释是：Convert a number or string to an integer\n",
-    "# 但是实际使用时你会发现，官方的定义太过笼统，许多细节都没有说，如果没有把这些细节搞清楚，那么就会越用越迷惑\n",
-    "# 其实 int 不只是仅仅接收数字或者字符串这么简单，只要是满足下面要求的参数都是可以的\n",
+    "# complex 型字面值，通过 a + bj 的形式声明，a 是复数的实数部，b 是复数的虚数部\n",
+    "1 + 2j"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 通过构造函数创建\n",
     "\n",
-    "# 1. 布尔型\n",
-    "# 在文章开篇我们提了一句布尔型其实是数值类型的子类型，因此布尔型实际上是可以用数字表示的\n",
-    "print(int(True) == 1)\n",
-    "\n",
-    "# 2. 空\n",
-    "print(int() == 0)  # int 方法可以不传参数，返回结果为 0\n",
-    "# 注意：空的意思是啥都不传，None 不行，空字符串/空列表更不行\n",
-    "\n",
-    "# 3. 实现了 __int__ 方法的类所生成的对象\n",
-    "# 数值类型默认实现了 __int__ 方法，因此在 int(一个数字) 的时候会调用并返回 __int__ 的结果作为转换结果\n",
-    "# 因此如果你自定义一个实现了 __int__ 方法的类，那么它的对象也是可以被 int 转换的，看例子：\n",
-    "\n",
-    "\n",
-    "class MyIntClass:\n",
-    "    def __init__(self, value):\n",
-    "        self.value = value\n",
-    "\n",
-    "    # 注意：__int__ 返回的必须是 int 型，不然报错\n",
-    "    def __int__(self):\n",
-    "        return self.value\n",
-    "\n",
-    "\n",
-    "my_num = MyIntClass(20)\n",
-    "print(int(my_num))\n",
-    "\n",
-    "# 4. 浮点数\n",
-    "# 浮点数也是数值类型，也是实现了 __int__ 的，但是注意，浮点数转整数是丢掉小数位，保留整数位\n",
-    "print(int(32.6))\n",
-    "print(int(-32.6))\n",
-    "\n",
-    "# 5. 字符串 / 字节串 / 字节数组\n",
-    "# 如果传入的是字符串、字节串或者字节数组，首先要注意一个参数 base，\n",
-    "# 注意：在这种情况下只能传入”整数字面值“，但是可以带正负号，且首尾可以有空格\n",
-    "# tip：字面值（Literal）是指表示特定值的语法表示形式。它们是代码中直接使用的固定值，而不是变量或计算结果\n",
-    "# 看例子：\n",
-    "\n",
-    "# 整数字面值字符串\n",
-    "print(int(\"42\"))\n",
-    "print(int(\" 42 \"))  # 首尾有空格\n",
-    "print(int(\"-42\"))  # 加了个负号\n",
-    "# int(\"42.2\") 不行，不是整数\n",
-    "\n",
-    "# 整数字面值字节串\n",
-    "print(int(b\"42\"))\n",
-    "print(int(b\"101010\", base=2))\n",
-    "# int(bytes([72, 101, 108, 108, 111])) 不行，不支持构造函数生成，要是字面值\n",
-    "# int(b\"42\", base=2) 不行，42 不是二进制\n",
-    "\n",
-    "# 整数字面值字节数组\n",
-    "print(int(bytearray(b\"42\")))\n",
-    "print(int(bytearray(b\"101010\"), 2))\n",
-    "\n",
-    "# 最后一点需要注意的是 base 的范围为 2-36，以及 0\n",
-    "# 当 base 为 0 的时候，int 函数会根据前缀来确定其解析进制\n",
-    "\n",
-    "int(\"42\", 0)  # 解析为十进制\n",
-    "int(\"0x42\", 0)  # 解析为十六进制\n",
-    "int(\"0o42\", 0)  # 解析为八进制\n",
-    "int(\"0b101010\", 0)  # 解析为二进制"
+    "数字类型 `int`、`float` 和 `complex` 都有各自同名函数，它们是对应类型的构造/转换函数，本节我们只看函数的构造功能，类型转换看这节 [类型转换]('./type_conversion.ipynb')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 整数创建\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "True\n",
-      "20.2\n",
-      "42.0\n",
-      "42.0\n",
-      "-42.0\n",
-      "42.0\n",
-      "42.0\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 浮点数转换\n",
-    "\n",
-    "float()  # float 方法的官方解释是 Convert a string or number to a floating point number, if possible.\n",
-    "# 但是呢，和上面的 int 方法一样，实际上也有好多细节，下面详细解释一下\n",
-    "# 在 int 那里已经讲了的部分，就不重复了，只讲一下和 int 方法不一样的地方\n",
-    "\n",
-    "# 1. 布尔型\n",
-    "print(float(True) == 1)\n",
-    "# 2. 空\n",
-    "print(float() == 0)\n",
-    "\n",
-    "# 3. 实现了 __float__ 方法的类所生成的对象\n",
-    "\n",
-    "\n",
-    "class MyFloatClass:\n",
-    "    def __init__(self, value):\n",
-    "        self.value = value\n",
-    "\n",
-    "    def __float__(self):  # 这里还是强调一下，返回类型一定要是浮点型\n",
-    "        return self.value\n",
-    "\n",
-    "\n",
-    "my_float = MyFloatClass(20.2)\n",
-    "print(float(my_float))\n",
-    "\n",
-    "\n",
-    "# 4. 字符串 / 字节串 / 字节数组\n",
-    "\n",
-    "# 注意：float 只有一个参数，没有 base，不涉及进制的问题\n",
-    "# 整数字面值字符串\n",
-    "print(float(\"42\"))\n",
-    "print(float(\" 42 \"))\n",
-    "print(float(\"-42\"))\n",
-    "\n",
-    "# 整数字面值字节串\n",
-    "print(float(b\"42\"))\n",
-    "\n",
-    "# 整数字面值字节数组\n",
-    "print(float(bytearray(b\"42\")))"
+    "int()  # 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 浮点数创建\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0j\n",
-      "(1+0j)\n",
-      "(-1.1-1.2j)\n",
-      "-1j\n",
-      "(3+0j)\n",
-      "(3+0j)\n",
-      "(-3+0j)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 复数转换\n",
+    "float()  # 0.0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 复数创建\n",
     "\n",
-    "complex()\n",
+    "构造函数 `complex` 方法接收两个参数，分别对应复数的实部和虚部，虚部如果不传则默认为 0\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-3+0j)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "complex()  # 0j\n",
     "\n",
-    "# 官方定义汉化：complex(real, imag) 等同于 real + imag*1j，由实部 real 和 虚部 imag 创建一个复数，虚部 imag 可以不传默认为 0\n",
-    "# 注意：还是要像上面一样，继续啰嗦，其实看完 int 和 float 两部分，你应该大概理清楚这里面的套路了，那么我们继续精简废话，看代码\n",
-    "print(complex())  # 传空，可以\n",
-    "print(complex(1))  # 虚部不传，可以\n",
-    "print(complex(-1.1, -1.2))  # 浮点数，可以\n",
-    "print(complex(+False, -True))  # 布尔型，可以（啰嗦最后一遍，python 中布尔型是数值类型的子类型）\n",
+    "complex(1)  # 虚部不传，1+0j\n",
+    "complex(-1.1, -1.2)  # 浮点数，-1.1-1.2j\n",
+    "complex(+False, -True)  # 布尔型，-1j（再啰嗦一遍，python 中布尔型是数字类型的子类型）\n",
     "\n",
     "# 注意：complex 方法如果只传一个参数，可以是数字或者字符串，但传两个参数，那么两个参数都必须是数字\n",
-    "# 还有：complex 参数不支持字节串或者字节数组了，只支持字面值字符串\n",
+    "# 注意：complex 参数不支持字节串或者字节数组\n",
     "\n",
     "# complex(\"-3\", 3)  # 错\n",
     "# complex(-3, \"3\")  # 错\n",
+    "# complex(b\"3\")  # 错\n",
     "\n",
-    "print(complex(\"3\"))  # 整数字面值字符串，可以\n",
-    "print(complex(\" 3 \"))  # 收尾加空格，可以\n",
-    "print(complex(\"-3\"))  # 带正负号，可以"
+    "complex(\" -3 \")  # 整数字面值字符串，可以带正负号，首尾也可以有空格"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 数字运算\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "15.0\n",
-      "5\n",
-      "5.0\n",
-      "2\n",
-      "29.160000000000004\n"
-     ]
+     "data": {
+      "text/plain": [
+       "5.0"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 迅速过一遍数字运算，很简单，但是每个语言数字类型都有它\n",
-    "\n",
+    "17.0 // 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# 加减乘除\n",
-    "print(2 * 10 - 10 / 2)\n",
+    "2 * (3 + 7) - 10 / 2\n",
     "\n",
-    "# tip：除法 / 返回的一直是浮点数，要想返回整数要用 //，前提是除数和被除数都是整数，否则返回的还是浮点数\n",
-    "print(17 // 3)  # 向下取整\n",
-    "print(17.0 // 3)  # 被除数是浮点数，结果也是\n",
+    "# tip：除法 / 返回的是浮点数，要想返回整数要用 // 且除数和被除数要都是整数\n",
+    "17 // 3  # 5：向下取整\n",
+    "17.0 // 3  # 5.0：被除数是浮点数，结果也是\n",
     "\n",
     "# 求余\n",
-    "print(17 % 3)\n",
+    "17 % 3  # 2\n",
     "\n",
     "# 幂运算\n",
-    "print(5.4**2)"
+    "3**2  # 9"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 数字类型内置方法/标准库操作\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 绝对值、取整\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "10.0\n",
-      "4\n",
-      "4\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "(0.3000000000000007, 10.0)\n",
-      "True\n",
-      "3.556\n",
-      "2\n",
-      "7\n",
-      "0.8700613728386878\n",
-      "5.114737736295881\n",
-      "[1, 5, 8, 3]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 最后，数学函数/随机数函数/三角函数 这些内置方法，只挑几个常用的说一下，其余的随用随查，大家也节约时间\n",
     "import math\n",
-    "import random\n",
     "\n",
-    "print(abs(-1))  # 取绝对值\n",
-    "print(math.fabs(-10))  # 浮点数形式取绝对值\n",
-    "print(math.ceil(3.3))  # 上取整\n",
-    "print(math.floor(4.9))  # 下取整\n",
-    "# 最大/最小值，参数支持元组，列表等序列\n",
-    "print(min(1, 2))\n",
-    "print(min((1, 2)))\n",
-    "print(min([1, 2]))\n",
-    "# max 也一样，不重复写了哈\n",
-    "\n",
-    "print(math.modf(10.3))  # 返回一个元组类型包括这个数的小数和整数部分，(小数部分, 整数部分)，两部分数值符号与参数相同，整数部分以浮点型表示\n",
-    "# 注意！！：这里 10.3 输出的小数部分不是 0.3，是 0.3000000000000007\n",
-    "# 想起来点啥没？那道经典的面试题？0.1 + 0.2 != 0.3？\n",
-    "print(0.1 + 0.2 != 0.3)  # why？解释放在 float_calc 这一章节\n",
+    "# 绝对值\n",
+    "abs(-1)\n",
     "\n",
     "# 四舍五入\n",
-    "print(round(3.55555, 3))\n",
+    "round(3.55555, 3)\n",
     "\n",
-    "# 从序列中随机抽取\n",
-    "print(random.choice([1, 2]))\n",
+    "# 浮点数形式绝对值\n",
+    "math.fabs(-10)\n",
+    "\n",
+    "# 上取整\n",
+    "math.ceil(3.3)\n",
+    "\n",
+    "# 下取整\n",
+    "math.floor(4.9)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 最大/最小值\n",
+    "\n",
+    "从一组`序列类型`里取最大/最小值\n",
+    "\n",
+    "- `max`\n",
+    "- `min`\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min(1, 2)\n",
+    "min((1, 2))\n",
+    "min([1, 2])\n",
+    "\n",
+    "# max 使用方式同上"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 随机数操作\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 5, 1, 8]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "# 从一个序列随机取值\n",
+    "random.choice([1, 2])\n",
     "\n",
     "# 从指定范围内随机抽取，支持设定梯度\n",
-    "print(random.randrange(1, 9, 2))\n",
+    "random.randrange(1, 9, 2)\n",
+    "\n",
     "# [0,1) 范围呢随机数生成\n",
-    "print(random.random())\n",
+    "random.random()\n",
+    "\n",
     "# 在指定范围呢生成随机数\n",
-    "print(random.uniform(1, 9))\n",
+    "random.uniform(1, 9)\n",
+    "\n",
     "# 随机对一个序列排序\n",
     "list = [1, 3, 5, 8]\n",
     "random.shuffle(list)\n",
-    "print(list)"
+    "list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 浮点数拆分\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.3000000000000007, 10.0)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "# 返回一个元组类型包括这个数的小数和整数部分，(小数部分, 整数部分)，两部分数值符号与参数相同，整数部分以浮点型表示\n",
+    "# 注意！！：这里 10.3 输出的小数部分不是 0.3，是 0.3000000000000007\n",
+    "math.modf(10.3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "关于浮点数计算误差原因看这一节：[0.1 + 0.2 !== 0.3 ?]('./float_calc.ipynb')\n"
    ]
   }
  ],
