--- a/src/python3_course_for_devs/notebooks/types.ipynb
+++ b/src/python3_course_for_devs/notebooks/types.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 基本数据类型\n",
+    "# 数据类型\n",
     "\n",
     "标准数据类型：\n",
     "\n",
@@ -14,6 +14,13 @@
     "- List 列表\n",
     "- Set 集合\n",
     "- Dict 字典\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 类型分类\n"
    ]
   },
   {
@@ -48,6 +55,7 @@
     "# 两次打印的内存标识不一样\n",
     "s = \"this is a str\"\n",
     "print(id(s))\n",
+    "\n",
     "s = \"this is a new str\"\n",
     "print(id(s))"
    ]
@@ -72,6 +80,7 @@
     "# 列表 l 新增加了一个元素，但是内存地址并没有改变\n",
     "l = [1, 2]\n",
     "print(id(l))\n",
+    "\n",
     "l.append(3)\n",
     "print(id(l))"
    ]
@@ -89,42 +98,106 @@
    "source": [
     "### 按`序列类型`划分\n",
     "\n",
-    "1. 序列类型：元素在内存中连续存储。序列类型可通过索引访问每个元素，且元素可以为不同类型。\n",
+    "- 序列类型：元素在内存中连续存储。序列类型可通过索引访问每个元素，且元素可以为不同类型。\n",
+    "\n",
     "  - 包括：字符串、元组、列表\n",
-    "2. 非序列类型：元素在内存中非连续存储。非序列类型的元素不可访问，因为它们没有像序列类型那样的索引机制。\n",
+    "\n",
+    "- 非序列类型：元素在内存中非连续存储。非序列类型的元素不可访问，因为它们没有像序列类型那样的索引机制。\n",
+    "\n",
     "  - 包括：数字、集合、字典\n",
     "\n",
-    "#### 序列类型的通用操作：（具体操作将在类型分章节详细介绍）\n",
+    "#### 序列类型的通用操作：（这里只简单概括，会在类型分章节详细介绍）\n",
     "\n",
-    "假如有两个序列：x，长度为 8，y，长度为 2\n",
-    "\n",
-    "1. 索引访问：可使用索引来访问序列中的单个元素。索引从 0 开始，使用方括号 [] 来实现。\n",
-    "  - 获取 x 第 3 个元素：`x[2]`\n",
-    "2. 切片操作：切片操作用于获取序列中的子序列，可以指定起始索引和结束索引（不包括结束索引本身）。使用方括号和冒号 [:] 来实现。\n",
-    "  - 获取 x 从 2 到 6 的片段：`x[2,7]`\n",
-    "3. 长度获取：使用 `len` 函数获取序列的长度，即序列中元素的个数。\n",
-    "  - `len(x) == 8`\n",
-    "4. 成员运算：使用 `in` 和 `not in` 运算符来判断某个元素是否存在于序列中。\n",
-    "  - 判断数字 9 是否在序列 x 中：`9 in x` 或 `9 not in x`\n",
-    "5. 连接：使用 + 运算符来连接两个序列，生成一个新的序列。\n",
-    "  - `x + y` 获得一个长度为 10 的新序列\n",
-    "6. 重复：使用 \\* 运算符将序列重复指定次数，生成一个新的序列。\n",
-    "  - `x * 2` 获得一个由两个 x 组成的新序列\n",
-    "7. 迭代：序列可以使用 for 循环进行迭代，依次访问序列中的每个元素。\n",
-    "8. 最大值和最小值：使用 `max` 和 `min` 函数分别获取序列中的最大值和最小值。\n",
-    "  - x 中最小值：`min(x)`，x 中最大值：`max(x)`\n",
-    "9. 元素计数：使用 `count` 函数统计序列中指定元素的出现次数。\n",
-    "  - x 中数字 3 出现的次数：`x.count(3)`\n",
-    "10. 元素位置获取：使用 `index` 函数获取序列中指定元素首次出现的位置。\n",
-    "  - x 中数字 4 的索引：`x.index(4)`\n"
+    "假如有两个序列：x，长度为 8，y，长度为 2\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- 索引访问：可使用索引来访问序列中的单个元素。索引从 0 开始，使用方括号 [] 来实现。\n",
+    "\n",
+    "  获取 x 第 3 个元素：`x[2]`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 切片操作：切片操作用于获取序列中的子序列，可以指定起始索引和结束索引（不包括结束索引本身）。使用方括号和冒号 [:] 来实现。\n",
+    "\n",
+    "  获取 x 从 2 到 6 的片段：`x[2,7]`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 长度获取：使用 `len` 函数获取序列的长度，即序列中元素的个数。\n",
+    "\n",
+    "  `len(x) == 8`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 成员运算：使用 `in` 和 `not in` 运算符来判断某个元素是否存在于序列中。\n",
+    "\n",
+    "  判断数字 9 是否在序列 x 中：`9 in x` 或 `9 not in x`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 连接：使用 + 运算符来连接两个序列，生成一个新的序列。\n",
+    "\n",
+    "  `x + y` 获得一个长度为 10 的新序列\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 重复：使用 \\* 运算符将序列重复指定次数，生成一个新的序列。\n",
+    "\n",
+    "  `x * 2` 获得一个由两个 x 组成的新序列\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 迭代：序列可以使用 for 循环进行迭代，依次访问序列中的每个元素。\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 最大值和最小值：使用 `max` 和 `min` 函数分别获取序列中的最大值和最小值。\n",
+    "\n",
+    "  x 中最小值：`min(x)`，x 中最大值：`max(x)`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 元素计数：使用 `count` 函数统计序列中指定元素的出现次数。\n",
+    "\n",
+    "  x 中数字 3 出现的次数：`x.count(3)`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 元素位置获取：使用 `index` 函数获取序列中指定元素首次出现的位置。\n",
+    "\n",
+    "  x 中数字 4 的索引：`x.index(4)`\n"
+   ]
   }
  ],
  "metadata": {
