--- a/src/python3_course_for_devs/notebooks/number.ipynb
+++ b/src/python3_course_for_devs/notebooks/number.ipynb
@@ -14,7 +14,7 @@
     "- `float`: 浮点型（双精度）\n",
     "- `complex`: 复数类型\n",
     "\n",
-    "tip: 在 python 中布尔型是数字类型的子类型，详细解释在 [布尔型]('./bool.ipynb')\n"
+    "tip: 在 python 中布尔型是 `int` 类型的子类型，详细解释在 [布尔型]('./bool.ipynb')\n"
    ]
   },
   {
@@ -95,6 +95,8 @@
     }
    ],
    "source": [
+    "# 通过 int 方法创建一个默认为 0 的整数\n",
+    "\n",
     "int()  # 0"
    ]
   },
@@ -122,6 +124,8 @@
     }
    ],
    "source": [
+    "# 通过 float 方法创建一个默认为 0.0 的小数\n",
+    "\n",
     "float()  # 0.0"
    ]
   },
@@ -151,20 +155,27 @@
     }
    ],
    "source": [
-    "complex()  # 0j\n",
+    "# 通过 complex 方法创建一个默认为 0j 的复数\n",
+    "complex()\n",
     "\n",
-    "complex(1)  # 虚部不传，1+0j\n",
-    "complex(-1.1, -1.2)  # 浮点数，-1.1-1.2j\n",
-    "complex(+False, -True)  # 布尔型，-1j（再啰嗦一遍，python 中布尔型是数字类型的子类型）\n",
+    "# 虚部不传，1+0j\n",
+    "complex(1)\n",
+    "\n",
+    "# 浮点数，-1.1-1.2j\n",
+    "complex(-1.1, -1.2)\n",
+    "\n",
+    "# 布尔型，-1j（再啰嗦一遍，python 中布尔型是整型的子类型）\n",
+    "complex(+False, -True)\n",
+    "\n",
+    "# 整数字面值字符串，可以带正负号，首尾也可以有空格\n",
+    "complex(\" -3 \")\n",
     "\n",
     "# 注意：complex 方法如果只传一个参数，可以是数字或者字符串，但传两个参数，那么两个参数都必须是数字\n",
-    "# 注意：complex 参数不支持字节串或者字节数组\n",
+    "# 还有：complex 参数不支持字节串或者字节数组\n",
     "\n",
     "# complex(\"-3\", 3)  # 错\n",
     "# complex(-3, \"3\")  # 错\n",
-    "# complex(b\"3\")  # 错\n",
-    "\n",
-    "complex(\" -3 \")  # 整数字面值字符串，可以带正负号，首尾也可以有空格"
+    "# complex(b\"3\")  # 错"
    ]
   },
   {
@@ -172,26 +183,6 @@
    "metadata": {},
    "source": [
     "## 数字运算\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5.0"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "17.0 // 3"
    ]
   },
   {
@@ -216,7 +207,7 @@
     "\n",
     "# tip：除法 / 返回的是浮点数，要想返回整数要用 // 且除数和被除数要都是整数\n",
     "17 // 3  # 5：向下取整\n",
-    "17.0 // 3  # 5.0：被除数是浮点数，结果也是\n",
+    "17.0 // 3  # 5.0\n",
     "\n",
     "# 求余\n",
     "17 % 3  # 2\n",
