--- a/src/python3_course_for_devs/notebooks/loop.ipynb
+++ b/src/python3_course_for_devs/notebooks/loop.ipynb
@@ -4,37 +4,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 循环\n"
+    "# 循环操作\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `while` 语句\n",
+    "\n",
+    "```py\n",
+    "while 判断条件：\n",
+    "    执行语句\n",
+    "```\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0  小于 3\n",
-      "1  小于 3\n",
-      "2  小于 3\n",
-      "3  大于或等于 3\n"
+      "0\n",
+      "1\n",
+      "2\n"
      ]
     }
    ],
    "source": [
     "count = 0\n",
     "while count < 3:\n",
-    "    print(count, \" 小于 3\")\n",
-    "    count = count + 1\n",
+    "    print(count)\n",
+    "    count = count + 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `while else` 语句\n",
+    "\n",
+    "```py\n",
+    "while 判断条件：\n",
+    "    执行语句\n",
     "else:\n",
-    "    print(count, \" 大于或等于 3\")"
+    "    执行语句\n",
+    "```\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +67,78 @@
       "0\n",
       "1\n",
       "2\n",
-      "Finally finished!\n"
+      "3 >= 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = 0\n",
+    "while count < 3:\n",
+    "    print(count)\n",
+    "    count = count + 1\n",
+    "else:\n",
+    "    print(count, \">= 3\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `for` 语句\n",
+    "\n",
+    "```py\n",
+    "for 元素 in 可迭代对象:\n",
+    "    执行语句\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in range(3):\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `for else` 语句\n",
+    "\n",
+    "```py\n",
+    "for 元素 in 可迭代对象:\n",
+    "    执行语句\n",
+    "else:\n",
+    "    执行语句\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "2 >= 3\n"
      ]
     }
    ],
@@ -52,13 +146,72 @@
     "for x in range(3):\n",
     "    print(x)\n",
     "else:\n",
-    "    print(\"Finally finished!\")"
+    "    print(x, \">= 3\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 跳过本轮循环\n",
+    "\n",
+    "`continue`\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in range(3):\n",
+    "    if x == 1:\n",
+    "        continue\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 跳出循环\n",
+    "\n",
+    "`break`\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in range(3):\n",
+    "    if x == 1:\n",
+    "        break\n",
+    "    print(x)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -73,9 +226,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.6"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
