--- a/src/python3_course_for_devs/notebooks/number.ipynb
+++ b/src/python3_course_for_devs/notebooks/number.ipynb
@@ -48,17 +48,17 @@
     }
    ],
    "source": [
-    "# int 型字面值\n",
+    "# 整型字面值\n",
     "1  # 正整数\n",
     "-1  # 负整数\n",
     "0xA0F  # 十六进制整数\n",
     "0o37  # 八进制整数\n",
     "\n",
-    "# float 型字面值\n",
+    "# 浮点型字面值\n",
     "1.1  # 小数\n",
     "2.5e2  # 科学计数法表示的小数\n",
     "\n",
-    "# complex 型字面值，通过 a + bj 的形式声明，a 是复数的实数部，b 是复数的虚数部\n",
+    "# 复数类型字面值，通过 a + bj 的形式声明，a 是复数的实数部，b 是复数的虚数部\n",
     "1 + 2j"
    ]
   },
@@ -68,7 +68,7 @@
    "source": [
     "### 通过构造函数创建\n",
     "\n",
-    "数字类型 `int`、`float` 和 `complex` 都有各自同名函数，它们是对应类型的构造/转换函数，本节我们只看函数的构造功能，类型转换看这节 [类型转换]('./type_conversion.ipynb')\n"
+    "数字类型 `int`、`float` 和 `complex` 都有各自同名函数，它们是对应类型的构造/转换函数，本节我们只用它们构造数字，数字转换看这节 [类型转换]('./type_conversion.ipynb')\n"
    ]
   },
   {
