--- a/src/python3_course_for_devs/notebooks/var.ipynb
+++ b/src/python3_course_for_devs/notebooks/var.ipynb
@@ -88,6 +88,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 删除一个变量的引用\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# del 操作会删除变量的引用，当变量的引用计数变为 0，那么 python 的垃圾回收机制就会回收变量所占用的内存\n",
+    "var = \"foo\"\n",
+    "del var"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 命名规范\n",
     "\n",
     "变量名开头使用字母或者下划线，其余部分由字母、数字或下划线组成，字母大小写敏感\n",
