--- a/src/python3_course_for_devs/notebooks/number.ipynb
+++ b/src/python3_course_for_devs/notebooks/number.ipynb
@@ -10,9 +10,9 @@
     "\n",
     "数字类型包括：\n",
     "\n",
-    "- `int`: 整型（长整型）\n",
-    "- `float`: 浮点型（双精度）\n",
-    "- `complex`: 复数类型\n",
+    "- `int`: 整型（长整型），即整数\n",
+    "- `float`: 浮点型（双精度），即小数\n",
+    "- `complex`: 复数类型，由 a+bj 表示，a 为实数部，b 为虚数部\n",
     "\n",
     "tip: 在 python 中布尔型是 `int` 类型的子类型，详细解释在 [布尔型]('./bool.ipynb')\n"
    ]
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -42,13 +42,13 @@
        "(1+2j)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 整型字面值\n",
+    "# 整数型字面值\n",
     "1  # 正整数\n",
     "-1  # 负整数\n",
     "0xA0F  # 十六进制整数\n",
@@ -58,7 +58,7 @@
     "1.1  # 小数\n",
     "2.5e2  # 科学计数法表示的小数\n",
     "\n",
-    "# 复数类型字面值，通过 a + bj 的形式声明，a 是复数的实数部，b 是复数的虚数部\n",
+    "# 复数类型字面值\n",
     "1 + 2j"
    ]
   },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
        "0"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
        "0.0"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
        "(-3+0j)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,10 +168,9 @@
     "complex(+False, -True)\n",
     "\n",
     "# 整数字面值字符串，可以带正负号，首尾也可以有空格\n",
-    "complex(\" -3 \")\n",
-    "\n",
     "# 注意：complex 方法如果只传一个参数，可以是数字或者字符串，但传两个参数，那么两个参数都必须是数字\n",
     "# 还有：complex 参数不支持字节串或者字节数组\n",
+    "complex(\" -3 \")\n",
     "\n",
     "# complex(\"-3\", 3)  # 错\n",
     "# complex(-3, \"3\")  # 错\n",
@@ -187,7 +186,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.0"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "9 // 2.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +215,7 @@
        "9"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,9 +224,12 @@
     "# 加减乘除\n",
     "2 * (3 + 7) - 10 / 2\n",
     "\n",
-    "# tip：除法 / 返回的是浮点数，要想返回整数要用 // 且除数和被除数要都是整数\n",
-    "17 // 3  # 5：向下取整\n",
-    "17.0 // 3  # 5.0\n",
+    "# 除法 / 返回的是浮点数\n",
+    "9 / 2  # 4.5\n",
+    "\n",
+    "# 地板除法 // 向下取整，如果被除数和除数都为整数，则结果为整数，否则为浮点数\n",
+    "9 // 2  # 4\n",
+    "9.0 // 2  # 4.0\n",
     "\n",
     "# 求余\n",
     "17 % 3  # 2\n",
@@ -227,12 +249,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 绝对值、取整\n"
+    "### 数学操作\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 绝对值\n",
+    "abs(-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.0"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 浮点数形式绝对值\n",
+    "import math\n",
+    "\n",
+    "math.fabs(-10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -241,28 +307,77 @@
        "4"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import math\n",
-    "\n",
-    "# 绝对值\n",
-    "abs(-1)\n",
-    "\n",
-    "# 四舍五入\n",
-    "round(3.55555, 3)\n",
-    "\n",
-    "# 浮点数形式绝对值\n",
-    "math.fabs(-10)\n",
-    "\n",
     "# 上取整\n",
-    "math.ceil(3.3)\n",
-    "\n",
+    "math.ceil(3.3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# 下取整\n",
     "math.floor(4.9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.556"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 四舍五入\n",
+    "round(3.55555, 3)  # 保留 3 位小数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 等同于 2**3\n",
+    "pow(2, 3)"
    ]
   },
   {
@@ -279,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +403,7 @@
        "1"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,16 +425,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[3, 5, 1, 8]"
+       "1"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,17 +443,89 @@
     "import random\n",
     "\n",
     "# 从一个序列随机取值\n",
-    "random.choice([1, 2])\n",
-    "\n",
+    "random.choice([1, 5, 3, 4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# 从指定范围内随机抽取，支持设定梯度\n",
-    "random.randrange(1, 9, 2)\n",
-    "\n",
-    "# [0,1) 范围呢随机数生成\n",
-    "random.random()\n",
-    "\n",
-    "# 在指定范围呢生成随机数\n",
-    "random.uniform(1, 9)\n",
-    "\n",
+    "random.randrange(1, 9, 2)  # 从 1 到 9 随机取值，间隔为 2，等同于从 [1, 3, 5, 7] 中随机取值"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9763965500235539"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# [0,1) 范围内生成一个随机数\n",
+    "random.random()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.644884831573863"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 在指定范围内生成随机数\n",
+    "random.uniform(1, 9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 8, 3, 1]"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# 随机对一个序列排序\n",
     "list = [1, 3, 5, 8]\n",
     "random.shuffle(list)\n",
@@ -349,31 +536,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 浮点数拆分\n"
+    "### 浮点数计算\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.3000000000000007, 10.0)"
+       "(-0.3000000000000007, -10.0)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import math\n",
-    "\n",
-    "# 返回一个元组类型包括这个数的小数和整数部分，(小数部分, 整数部分)，两部分数值符号与参数相同，整数部分以浮点型表示\n",
-    "# 注意！！：这里 10.3 输出的小数部分不是 0.3，是 0.3000000000000007\n",
-    "math.modf(10.3)"
+    "# 用元组返回一个数的小数和整数部分：(小数部分, 整数部分)，两部分数值都带符号且都为浮点数\n",
+    "# 注意：小数部分不是 0.3，而是 0.3000000000000007，为什么？向下看\n",
+    "math.modf(-10.3)"
    ]
   },
   {
